[package]
name = "sheatmap"
version = "0.1.0"
authors = ["Rory McCann <rory@technomancy.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
csv = "1.1.3"
anyhow = "1.0.26"
rstar = "0.7.1"
log = "*"
env_logger = "*"
