[package]
name = "sheatmap"
description = "Generate heatmap image data from input points. Usable easily with gdal to make heatmap geotiffs from points"
license = "AGPL-3.0+"
version = "0.1.0"
authors = ["Rory McCann <rory@technomancy.org>"]
edition = "2018"
repository = "https://git.sr.ht/~ebel/sheatmap"
website = "https://git.sr.ht/~ebel/sheatmap"

[dependencies]
clap = "2.33.0"
csv = "1.1.3"
anyhow = "1.0.26"
rstar = "0.7.1"
log = "0.4.8"
env_logger = "0.7.1"
flate2 = "1.0.13"
